After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651416 - Pointer arithmetic fixes for end of string access
Pointer arithmetic fixes for end of string access
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-29 23:01 UTC by Iain Nicol
Modified: 2011-05-30 07:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Pointer arithmetic fixes for end of string access (1.40 KB, patch)
2011-05-29 23:03 UTC, Iain Nicol
none Details | Review

Description Iain Nicol 2011-05-29 23:01:28 UTC
Found a pointer arithmetic bug in the 7z support code.  Did a grep, found only one other similar example.

Patch is forthcoming.
Comment 1 Iain Nicol 2011-05-29 23:03:01 UTC
Created attachment 188850 [details] [review]
Pointer arithmetic fixes for end of string access
Comment 2 Paolo Bacchilega 2011-05-30 07:02:56 UTC
patch pushed to master now, thank you.