Pointer arithmetic fixes for end of string access

Based on FR commit: 3d7fa24ca267e333d7406eff38ec02b519110ecc
From: Iain Nicol <iainn@src.gnome.org>
Gnome bug: http://bugzilla.gnome.org/show_bug.cgi?id=651416